# propERdev

./: .dockerignore  .gitignore  DATABASE_MIGRATION_SUMMARY.md  DATABASE_SETUP.md  Makefile  README.md  assign_azimi_team.py  db_viewer.py  env.example  fix_nric.py  fix_team_azimi.py  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  setup_database.py  test_db_connection.py
app/: __init__.py  app.py  controllers.py  routes.py
app/core/: __init__.py  config.py  db.py
app/exceptions/: __init__.py
app/middleware/: __init__.py
app/models/: __init__.py  activity_logs.py  base.py  cases.py  clients.py  commission_records.py  company_settings.py  ed_closures.py  ed_summary.py  financial_reports.py  invoices.py  ledger.py  notifications.py  properties.py  registration_requests.py  roles.py  users.py
app/routes/: __init__.py  admin.py  app.py  auth.py  cases.py  dashboard.py  reports.py  root.py  settings.py  users.py
app/scripts/: init_db.py  insert_all_data.py  skipped_agents.txt
app/services/: __init__.py
app/static/css/: style.css
app/templates/: settings.html
app/templates/admin/: database_viewer.html  table_view.html
app/templates/auth/: forgot_password.html  login.html  pending_requests.html  register.html  reset_password.html
app/templates/base/: dashboard_base.html
app/templates/billing/: invoice.html  resit.html
app/templates/cases/: add_case.html  cases.html
app/templates/dashboard/: dashboard_admin.html  dashboard_agent.html  dashboard_leader.html
app/templates/reports/: report_pdf.html  reports.html
app/templates/users/: edit_user.html  edit_user_popup.html  user_details.html  user_details_popup.html  users.html
app/utils/: __init__.py  auth.py  db.py
docs/: PROJECT_STRUCTURE.md  __init__.py
docs/deployment/: DATABASE_MIGRATION_SUMMARY.md  DATABASE_SETUP.md  PRODUCTION_DEPLOYMENT.md  QUICK_DEPLOYMENT.md
scripts/: __init__.py  backup_db.sh  deploy.sh  setup_dev.py
scripts/database/: __init__.py  init_database.py
scripts/database/data/: AGENT 2025.xlsx  LIST CASE APRIL.xlsx
scripts/migrations/: __init__.py
scripts/utils/: __init__.py  db_viewer.py
tests/: __init__.py  run_tests.py  test_admin_access.py  test_data.py  update_models.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: simple_test.py
